[package]
name = "spcc"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug = ["bevy-inspector-egui"]
#debug = ["bevy-inspector-egui", "bevy_mod_picking/debug"]

[dependencies]
bevy = "0.11"
bevy_common_assets = { version = "0.7.0", features = ["ron"] }
iyes_progress = { version = "0.9.1", features = ["assets"] }
bevy-inspector-egui = { version = "0.19", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
#bevy_mod_picking = { version = "0.15.0", default-features = false, features = ["backend_raycast"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
